--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Mustafa P.",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
